<?xml version="1.0" encoding="utf-8"?>
<resources>

    <string name="app_name">TicketCollector</string>
    <string name="title_activity_waiting_for_card">Ticket Collector</string>
    <string name="hello_world">Hello world!</string>
    <string name="waiting_header">Waiting for College ID...</string>
    <string name="waiting_text">Please touch an Imperial ID Card to the back of this device to continue.</string>

    <string name="no_such_customer">Unrecognized card</string>
    <string name="multiple_results">Card is registered to multiple owners!</string>
    <string name="printer">Printer:</string>
    <string name="action_select_printer">Select Printer</string>
    <string name="customer_name_here">Customer Name Here</string>
    <string name="count_tickets"><![CDATA[<count> tickets]]></string>
    <string name="print_all_tickets">Print All Tickets</string>
    <string name="print_pending_tickets">Print Pending Tickets</string>
    <string name="collect_pending_tickets">Collect Pending Tickets</string>

</resources>
